Introduce upload file to parse (#4)
* Introduce new endpoints to upload file as input for parsing process
* Bump to version 1.204c.2
